@@ -1,3 +1,11 @@
+2006-10-02  Bruno Haible  <bruno@clisp.org>
+
+	* po/fr.po: Update from Christophe Combelles <ccomb@free.fr>.
+	* po/id.po: New file, from Tedi Heriyanto <tedi_heriyanto@yahoo.com>.
+	* po/LINGUAS: Add id.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESFILES): Add the new message catalogs.
+
 2006-09-18  Bruno Haible  <bruno@clisp.org>
 
 	* hello-{c,c++,objc}*/{autoclean.sh,m4/Makefile.am}: Remove
